<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_volumenes__cilindro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex6.listview.volumenes_Cilindro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/str_Cilindro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/txtRadioCil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_msjRadio"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtAlturaCil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_msjAltura"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="VolCilindro"
                android:text="@string/str_Calcular" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Limpiar"
                android:text="@string/str_Limpiar" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
