<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_volumenes__esfera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex6.listview.volumenes_Esfera">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:text="@string/str_Esfera" />

        <EditText
            android:id="@+id/txtRadioEsfera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_msjRadio"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="VolEsfera"
                android:text="@string/str_Calcular" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Limpiar"
                android:text="@string/str_Limpiar" />
        </LinearLayout>



        </LinearLayout>


</RelativeLayout>
